tests/ui/feature-gates/soft-syntax-gates-with-errors.stderr
error[E0658]: `macro` is experimental
  --> $DIR/soft-syntax-gates-with-errors.rs:5:1
   |
LL | macro a() {}
   | ^^^^^^^^^^^^
   |
   = note: see issue #39412 <https://github.com/crablang/crablang/issues/39412> for more information
   = help: add `#![feature(decl_macro)]` to the crate attributes to enable

error[E0658]: `macro` is experimental
  --> $DIR/soft-syntax-gates-with-errors.rs:16:5
   |
LL |     macro c() {}
   |     ^^^^^^^^^^^^
   |
   = note: see issue #39412 <https://github.com/crablang/crablang/issues/39412> for more information
   = help: add `#![feature(decl_macro)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
